Сделана страница использования пакета. Сделан вывод результатов в модальном окне

--- a/public/local/templates/demo/template_styles.css
+++ b/public/local/templates/demo/template_styles.css
@@ -6,3 +6,12 @@ span.title {
 .nav>li>a {
     padding: 10px 11px !important;
 }
+
+.example .code {
+    padding-left: 0 !important;
+}
+
+.result-scrollable {
+    max-height: 600px;
+    overflow-y: scroll;
+}
